2007-02-20  Ales Hakl  <ales at hakl dot net>

	* src/util.c (dfsch__create_finalized_mutex): finalized mutexes as
	sepparate objects (in order to break finalization cycles)

2007-01-27  Ales Hakl  <ales at hakl dot net>

	* src/object.c (dfsch__object_native_register): slot-set! should
	have bang in name.

2007-01-22  Ales Hakl  <ales at hakl dot net>

	* configure.ac (READLINE_LIBS): probably working support for
	versions without readline

	* TODO: removed object system from todo list

	* Makefile.am: install object.h

2007-01-20  Ales Hakl  <ales at hakl dot net>

	* src/object.c (class_write): correct buffer size
	(class_apply): We don't want send_tr here

	* dfsch/magic.h: exception handling in plain old C (ugly and so on)

	* src/dfsch.c (dfsch_exception_write): handle exceptions

	* src/object.c: object system

	* src/native.c (native_object_2_string): same signature as write
	method for wrappers

2007-01-16  Ales Hakl  <ales at hakl dot net>

	* Makefile.am (libdfsch_la_SOURCES): reflect rename of object.h to
	types.h

	* src/hash.c (dfsch_hash_unset): lower bound on hash table size

	* src/native.c (native_get_type): handle the empty list case

	* src/dfsch.c (type_write): It's not good idea to reuse same buffer
	for two sucessive calls of sl_append()

	* src/native.c (native_get_type): inspect type of given object
	(probably useless for now)

	* lib/load.c (dfsch_read_scm_stream): streams are closed by
	fclose(3) not close(2)
	(dfsch_read_scm_fd/_stream): dont close anything (it's
	responsibility of caller) 

	* dfsch/dfsch.h (dfsch_type_t): more or less first-class types

2007-01-15  Ales Hakl  <ales at hakl dot net>

	* src/types.h: renamed from object.h

	* dfsch/wrapper.h, dfsch/strings.h: added extern "C" for C++

	* src/parse.c (dispatch_string): unicode escapes

	* src/strings.c (escape_table): excape NUL as \x00 and not \0

	* src/parse.c (dispatch_string): simplified hex byte-escape handling
	(dispatch_string): full octal escapes
