@@ -1,5 +1,10 @@
 2007-02-20  Ales Hakl  <ales at hakl dot net>
 
+	* lib/threads.c (dfsch_channel_create): use finalized
+	synchronization primitives
+
+2007-02-20  Ales Hakl  <ales at hakl dot net>
+
 	* src/util.c (dfsch__create_finalized_mutex): finalized mutexes as
 	sepparate objects (in order to break finalization cycles)
 
